--- a/public/index.html
+++ b/public/index.html
@@ -5,66 +5,95 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Bookly+ Dashboard</title>
   <style>
-    body { font-family: system-ui, Arial, sans-serif; margin: 24px; }
-    header { margin-bottom: 16px; }
-    .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 16px; }
-    section { border: 1px solid #e5e7eb; border-radius: 8px; padding: 16px; }
-    code { background: #f3f4f6; padding: 2px 6px; border-radius: 4px; }
+    :root {
+      --bg: #0b1220;
+      --card: #111a2b;
+      --muted: #8aa0bf;
+      --text: #e8eefc;
+      --primary: #3b82f6;
+      --primary-600: #2563eb;
+      --danger: #ef4444;
+      --warning: #f59e0b;
+      --success: #22c55e;
+      --border: #1b2a44;
+    }
+    * { box-sizing: border-box; }
+    body { font-family: system-ui, Arial, sans-serif; margin: 24px; background: var(--bg); color: var(--text); }
+    header { margin-bottom: 20px; display:flex; align-items:center; justify-content:space-between; flex-wrap:wrap; gap:12px; }
+    .brand { display:flex; align-items:center; gap:10px; }
+    .badge { background: linear-gradient(135deg, var(--primary), var(--primary-600)); color:#fff; padding:4px 10px; border-radius:999px; font-size:12px; letter-spacing:.3px; }
+    .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 18px; }
+    section { background: var(--card); border: 1px solid var(--border); border-radius: 12px; padding: 16px; box-shadow: 0 6px 20px rgba(0,0,0,.25); }
+    h2 { margin: 0 0 12px 0; font-size: 18px; }
+    code { background: #0f172a; padding: 2px 6px; border-radius: 4px; color:#cbd5e1; }
     ul { margin: 0; padding-left: 18px; }
-    .muted { color: #6b7280; }
+    .muted { color: var(--muted); }
+    .row { display:flex; gap:10px; flex-wrap:wrap; align-items:center; margin-bottom:10px; }
+    .row > * { flex: 0 1 auto; }
+    input { background:#0f172a; color:#e5e7eb; border:1px solid var(--border); border-radius:8px; padding:10px 12px; outline:none; min-width:160px; }
+    input:focus { border-color: var(--primary); box-shadow: 0 0 0 3px rgba(59,130,246,.25); }
+    button { background: var(--primary); color:#fff; border:none; border-radius:8px; padding:10px 12px; cursor:pointer; transition: .15s ease-in-out; }
+    button:hover { background: var(--primary-600); transform: translateY(-1px); }
+    .btn-danger { background: var(--danger); }
+    .btn-danger:hover { filter: brightness(.95); }
+    .btn-ghost { background: transparent; border:1px solid var(--border); color: var(--text); }
+    .list { display:flex; flex-direction:column; gap:8px; }
+    .item { display:flex; align-items:center; justify-content:space-between; gap:10px; background:#0f172a; border:1px solid var(--border); border-radius:10px; padding:10px 12px; }
+    .item .title { font-weight:600; }
+    .toolbar { display:flex; gap:6px; }
+    /* Books availability checkbox styling */
+    #bookAvailable { accent-color: var(--success); transform: scale(1.2); }
+    label.checkbox { display:flex; align-items:center; gap:8px; color: var(--text); }
   </style>
 </head>
 <body>
   <header>
-    <h1>Bookly+ (SQL + NoSQL)</h1>
-    <p class="muted">Aperçu rapide de l'API. Backend sur <code>/</code>, endpoints sous <code>/api/*</code>.</p>
-    <p>
-      Base URL: <code id="baseUrl"></code>
-    </p>
+    <div class="brand">
+      <h1 style="margin:0;">Bookly+ (SQL + NoSQL)</h1>
+      <span class="badge">SAIED Nabil</span>
+    </div>
+    <p class="muted" style="margin:0;">Endpoints: <code>/api/users</code>, <code>/api/books</code>, <code>/api/profiles</code></p>
   </header>
 
   <div class="grid">
     <section>
-      <h2>Statut API</h2>
-      <pre id="rootStatus">Chargement...</pre>
-    </section>
-
-    <section>
       <h2>Users</h2>
-      <div style="display:flex; gap:8px; margin-bottom:8px; flex-wrap:wrap;">
+      <div class="row">
         <input id="userName" placeholder="name" />
         <input id="userEmail" placeholder="email" />
         <button id="addUser">Ajouter</button>
       </div>
-      <div id="usersList" class="muted">Chargement...</div>
-      <button id="refreshUsers">Rafraîchir</button>
+      <div id="usersList" class="list muted">Chargement...</div>
+      <button class="btn-ghost" id="refreshUsers">Rafraîchir</button>
     </section>
 
     <section>
       <h2>Books</h2>
-      <div style="display:flex; gap:8px; margin-bottom:8px; flex-wrap:wrap;">
+      <div class="row">
         <input id="bookTitle" placeholder="title" />
         <input id="bookAuthor" placeholder="author" />
-        <label style="display:flex; align-items:center; gap:6px;">
-          <input id="bookAvailable" type="checkbox" checked /> disponible
-        </label>
+        <label class="checkbox"><input id="bookAvailable" type="checkbox" checked /> disponible</label>
         <button id="addBook">Ajouter</button>
       </div>
-      <div id="booksList" class="muted">Chargement...</div>
-      <button id="refreshBooks">Rafraîchir</button>
+      <div id="booksList" class="list muted">Chargement...</div>
+      <button class="btn-ghost" id="refreshBooks">Rafraîchir</button>
     </section>
 
     <section>
       <h2>Profiles</h2>
-      <button id="refreshProfiles">Rafraîchir</button>
+      <div class="row">
+        <input id="profileUserId" type="number" min="1" value="1" style="max-width:120px;" />
+        <input id="profilePrefs" placeholder="preferences (ex: sci-fi,web)" />
+        <button id="addProfile">Ajouter profil</button>
+        <button class="btn-ghost" id="refreshProfiles">Rafraîchir</button>
+        <button class="btn-ghost" id="seedDemo">Créer données démo</button>
+      </div>
+      <div id="profilesList" class="list muted">Chargement...</div>
       <pre id="profiles">Chargement...</pre>
     </section>
   </div>
 
   <script>
-    const baseUrl = `${location.protocol}//${location.host}`;
-    document.getElementById('baseUrl').textContent = baseUrl;
-
     async function loadJson(path) {
       const res = await fetch(path);
       if (!res.ok) throw new Error(`${path} -> ${res.status}`);
@@ -72,17 +101,11 @@
     }
 
     async function init() {
-      try {
-        const root = await loadJson('/');
-        document.getElementById('rootStatus').textContent = JSON.stringify(root, null, 2);
-      } catch (e) {
-        document.getElementById('rootStatus').textContent = String(e);
-      }
-
       await Promise.all([
         refreshUsers(),
         refreshBooks(),
         refreshProfiles(),
+        refreshProfilesList(),
       ]);
     }
 
@@ -104,10 +127,12 @@
         const data = await loadJson('/api/users');
         list.innerHTML = '';
         if (!Array.isArray(data) || data.length === 0){ list.textContent = 'Aucun user'; return; }
-        const ul = document.createElement('ul');
+        const ul = document.createElement('div');
         data.forEach(u => {
-          const li = document.createElement('li');
-          li.textContent = `#${u.id} ${u.name} <${u.email}>`;
+          const li = document.createElement('div'); li.className = 'item';
+          const left = document.createElement('div');
+          left.innerHTML = `<span class="title">#${u.id} ${htmlesc(u.name)}</span> <span class="muted">&lt;${htmlesc(u.email)}&gt;</span>`;
+          const tools = document.createElement('div'); tools.className = 'toolbar';
 
           const editBtn = document.createElement('button'); editBtn.textContent='Modifier'; editBtn.onclick = async () => {
             const name = prompt('Nouveau nom:', u.name); if (name===null) return;
@@ -117,14 +142,15 @@
             refreshUsers();
           };
 
-          const delBtn = document.createElement('button'); delBtn.textContent='Supprimer'; delBtn.onclick = async () => {
+          const delBtn = document.createElement('button'); delBtn.className='btn-danger'; delBtn.textContent='Supprimer'; delBtn.onclick = async () => {
             if (!confirm('Supprimer cet utilisateur ?')) return;
             const res = await fetch(`/api/users/${u.id}`, { method:'DELETE' });
             if (!res.ok) return alert('Erreur suppression');
             refreshUsers();
           };
 
-          li.appendChild(rowActions([editBtn, delBtn]));
+          tools.appendChild(editBtn); tools.appendChild(delBtn);
+          li.appendChild(left); li.appendChild(tools);
           ul.appendChild(li);
         });
         list.appendChild(ul);
@@ -138,10 +164,12 @@
         const data = await loadJson('/api/books');
         list.innerHTML = '';
         if (!Array.isArray(data) || data.length === 0){ list.textContent = 'Aucun livre'; return; }
-        const ul = document.createElement('ul');
+        const ul = document.createElement('div');
         data.forEach(b => {
-          const li = document.createElement('li');
-          li.textContent = `#${b.id} ${b.title} — ${b.author} (${b.available ? 'dispo' : 'indispo'})`;
+          const li = document.createElement('div'); li.className = 'item';
+          const left = document.createElement('div');
+          left.innerHTML = `<span class="title">#${b.id} ${htmlesc(b.title)}</span> — ${htmlesc(b.author)} <span class="muted">(${b.available ? 'dispo' : 'indispo'})</span>`;
+          const tools = document.createElement('div'); tools.className = 'toolbar';
 
           const editBtn = document.createElement('button'); editBtn.textContent='Modifier'; editBtn.onclick = async () => {
             const title = prompt('Nouveau titre:', b.title); if (title===null) return;
@@ -152,14 +180,15 @@
             refreshBooks();
           };
 
-          const delBtn = document.createElement('button'); delBtn.textContent='Supprimer'; delBtn.onclick = async () => {
+          const delBtn = document.createElement('button'); delBtn.className='btn-danger'; delBtn.textContent='Supprimer'; delBtn.onclick = async () => {
             if (!confirm('Supprimer ce livre ?')) return;
             const res = await fetch(`/api/books/${b.id}`, { method:'DELETE' });
             if (!res.ok) return alert('Erreur suppression');
             refreshBooks();
           };
 
-          li.appendChild(rowActions([editBtn, delBtn]));
+          tools.appendChild(editBtn); tools.appendChild(delBtn);
+          li.appendChild(left); li.appendChild(tools);
           ul.appendChild(li);
         });
         list.appendChild(ul);
@@ -169,15 +198,76 @@
     async function refreshProfiles() {
       const el = document.getElementById('profiles');
       el.textContent = 'Chargement...';
+      const id = document.getElementById('profileUserId').value || 1;
       try {
-        const data = await loadJson('/api/profiles/user-full/1');
+        const res = await fetch(`/api/profiles/user-full/${id}`);
+        if (res.status === 404) { el.textContent = ''; return; }
+        if (!res.ok) throw new Error(`${res.status}`);
+        const data = await res.json();
         el.textContent = JSON.stringify(data, null, 2);
-      } catch (e) { el.textContent = String(e); }
+      } catch (e) { el.textContent = `Erreur chargement profil: ${String(e)}`; }
+    }
+
+    async function refreshProfilesList() {
+      const list = document.getElementById('profilesList');
+      if (!list) return;
+      list.textContent = 'Chargement...';
+      try {
+        const data = await loadJson('/api/profiles');
+        list.innerHTML = '';
+        if (!Array.isArray(data) || data.length === 0){ list.textContent = 'Aucun profil'; return; }
+        const ul = document.createElement('div');
+        data.forEach(p => {
+          const li = document.createElement('div'); li.className = 'item';
+          const left = document.createElement('div');
+          left.innerHTML = `<span class="title">userId=${p.userId}</span> <span class="muted">prefs: ${(p.preferences||[]).map(htmlesc).join(', ')}</span>`;
+          li.appendChild(left);
+          ul.appendChild(li);
+        });
+        list.appendChild(ul);
+      } catch (e) { list.textContent = String(e); }
     }
 
     document.getElementById('refreshUsers').addEventListener('click', refreshUsers);
     document.getElementById('refreshBooks').addEventListener('click', refreshBooks);
     document.getElementById('refreshProfiles').addEventListener('click', refreshProfiles);
+    document.getElementById('refreshProfiles').addEventListener('click', refreshProfilesList);
+    document.getElementById('seedDemo').addEventListener('click', async () => {
+      const id = parseInt(document.getElementById('profileUserId').value || '1', 10);
+      try {
+        // Create user if missing
+        let users = await (await fetch('/api/users')).json();
+        if (!users.find(u => u.id === id)) {
+          await fetch('/api/users', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ name: `User ${id}`, email: `user${id}@example.com` }) });
+        }
+        // Create profile
+        await fetch('/api/profiles', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ userId: id, preferences: ['demo'], history: [] }) });
+        refreshUsers();
+        refreshProfiles();
+      } catch (e) {
+        alert('Erreur création démo: ' + String(e));
+      }
+    });
+
+    document.getElementById('addProfile').addEventListener('click', async () => {
+      const id = parseInt(document.getElementById('profileUserId').value || '1', 10);
+      const prefsRaw = document.getElementById('profilePrefs').value || '';
+      const preferences = prefsRaw.split(',').map(s => s.trim()).filter(Boolean);
+      try {
+        // ensure user exists
+        let users = await (await fetch('/api/users')).json();
+        if (!users.find(u => u.id === id)) {
+          await fetch('/api/users', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ name: `User ${id}`, email: `user${id}@example.com` }) });
+        }
+        const res = await fetch('/api/profiles', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ userId: id, preferences, history: [] }) });
+        if (!res.ok) return alert('Erreur création profil');
+        document.getElementById('profilePrefs').value='';
+        await refreshProfiles();
+        await refreshProfilesList();
+      } catch (e) {
+        alert('Erreur: ' + String(e));
+      }
+    });
 
     document.getElementById('addUser').addEventListener('click', async () => {
       const name = document.getElementById('userName').value.trim();
